[PresentationConst] I changed some props of the polygon to fix an 'invisible' bar

--- a/src/Pages/HomePage/PresentationConst.scss
+++ b/src/Pages/HomePage/PresentationConst.scss
@@ -50,7 +50,7 @@
 
     height: 100vh;
     width: 10vw;
-    clip-path: polygon(0% 100%,0% 0%,100% 0%);
+    clip-path: polygon(0% 100%,0% -1%,100% -1%);
     position: relative;
     // right: 10vw;
 }
